Overflow fix

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -969,6 +969,9 @@ strong, b {
 	color: white;
 	font-size: 24px;
 	text-transform: uppercase;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .third-menu > .list,
 .second-menu > .list {
